package edu.hitsz.item;

public class BombSupply extends FlyingItem{
    public BombSupply(int locationX, int locationY, int speedX, int speedY, String type) {
        super(locationX, locationY, speedX, speedY, type);
    }
}
