@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + FlyingObject(int locationX, int locationY, int speedX, int speedY):void
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<Bullet>

 }

abstract class AbstractBullet
{
    - power:int
    + Bullet(int locationX, int locationY, int speedX, int speedY, int power):void
    + forward():void
	+ getPower():int
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- AbstractBullet

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- EnemyAircraft

EnemyAircraft <|-- MobEnemy
EnemyAircraft <|-- EliteEnemy
EnemyAircraft <|-- EnemyBoss

AbstractBullet <|-- HeroBullet
AbstractBullet <|-- EnemyBullet
HeroAircraft <|-- HeroAircraft
class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + {static} getInstance():
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
    + getCure(int):
}

class EnemyAircraft{
    - direction:int
    + EnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
}



class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
}
class EliteEnemy{
    - shootNum:int
    - power:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + shoot():List<Bullet>
    + forward():void
    + DropItemUponDeath():void

}
class EnemyBoss{
    - shootNum:int
    - power:int
    + EnemyBoss(int locationX, int locationY, int speedX, int speedY, int hp):void
    + shoot():List<Bullet>

}
class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
}
AbstractFlyingObject <|-- FlyingItem
abstract class FlyingItem{
    - type:String
    +forward():void
    + FlyingItem(int locationX, int locationY,int speedX, int speedY)

}
FlyingItem <|-- CureSupply
FlyingItem <|-- FireSupply
FlyingItem <|-- BombSupply
class CureSupply{
    -cureAmount:int
    +cure():void
}
class FireSupply{
    +fire():void
}
class BombSupply{
    +bomb():void
}
@enduml